changed a lot of stuff -

--- a/wp-content/uploads/elementor/css/post-1364.css
+++ b/wp-content/uploads/elementor/css/post-1364.css
@@ -399,7 +399,7 @@
   --container-widget-flex-grow: 0;
   text-align: left;
   color: #a5a5a5;
-  font-family: "Poppins", Sans-serif;
+  font-family: "Arial", Sans-serif;
   font-size: 18px;
 }
 .elementor-1364 .elementor-element.elementor-element-060f0ec.elementor-element {
@@ -425,7 +425,7 @@
   --container-widget-flex-grow: 0;
   text-align: left;
   color: #a5a5a5;
-  font-family: "Poppins", Sans-serif;
+  font-family: "Arial", Sans-serif;
   font-size: 18px;
 }
 .elementor-1364 .elementor-element.elementor-element-32f295e.elementor-element {
@@ -467,7 +467,7 @@
   --container-widget-flex-grow: 0;
   text-align: left;
   color: #a5a5a5;
-  font-family: "Poppins", Sans-serif;
+  font-family: "Arial", Sans-serif;
   font-size: 18px;
 }
 .elementor-1364 .elementor-element.elementor-element-c32a65c.elementor-element {
@@ -522,7 +522,7 @@
   --container-widget-flex-grow: 0;
   text-align: left;
   color: #a5a5a5;
-  font-family: "Poppins", Sans-serif;
+  font-family: "Arial", Sans-serif;
   font-size: 18px;
 }
 .elementor-1364 .elementor-element.elementor-element-5791f50.elementor-element {
@@ -536,7 +536,7 @@
   --container-widget-flex-grow: 0;
   text-align: left;
   color: #a5a5a5;
-  font-family: "Poppins", Sans-serif;
+  font-family: "Arial", Sans-serif;
   font-size: 18px;
 }
 .elementor-1364 .elementor-element.elementor-element-2427018.elementor-element {
@@ -565,7 +565,7 @@
   .widget-image-caption {
   text-align: center;
   color: #a5a5a5;
-  font-family: "Poppins", Sans-serif;
+  font-family: "Arial", Sans-serif;
   font-size: 12px;
   margin-block-start: 0px;
 }
@@ -660,7 +660,7 @@
   --container-widget-flex-grow: 0;
   text-align: left;
   color: #a5a5a5;
-  font-family: "Poppins", Sans-serif;
+  font-family: "Arial", Sans-serif;
   font-size: 18px;
 }
 .elementor-1364 .elementor-element.elementor-element-9558265.elementor-element {
@@ -694,7 +694,7 @@
   .widget-image-caption {
   text-align: center;
   color: #a5a5a5;
-  font-family: "Poppins", Sans-serif;
+  font-family: "Arial", Sans-serif;
   font-size: 12px;
   margin-block-start: 0px;
 }
@@ -819,7 +819,7 @@
   --container-widget-flex-grow: 0;
   text-align: left;
   color: #a5a5a5;
-  font-family: "Poppins", Sans-serif;
+  font-family: "Arial", Sans-serif;
   font-size: 18px;
 }
 .elementor-1364 .elementor-element.elementor-element-9721ea6.elementor-element {
@@ -833,7 +833,7 @@
   --container-widget-flex-grow: 0;
   text-align: left;
   color: #a5a5a5;
-  font-family: "Poppins", Sans-serif;
+  font-family: "Arial", Sans-serif;
   font-size: 18px;
 }
 .elementor-1364 .elementor-element.elementor-element-9335a8b.elementor-element {
@@ -890,7 +890,7 @@
   --container-widget-flex-grow: 0;
   text-align: left;
   color: #a5a5a5;
-  font-family: "Poppins", Sans-serif;
+  font-family: "Arial", Sans-serif;
   font-size: 18px;
 }
 .elementor-1364 .elementor-element.elementor-element-e5f5f76.elementor-element {
@@ -973,7 +973,7 @@
   --container-widget-flex-grow: 0;
   text-align: left;
   color: #a5a5a5;
-  font-family: "Poppins", Sans-serif;
+  font-family: "Arial", Sans-serif;
   font-size: 18px;
 }
 .elementor-1364 .elementor-element.elementor-element-0e6908a.elementor-element {
@@ -1022,7 +1022,7 @@
   --container-widget-flex-grow: 0;
   text-align: left;
   color: #a5a5a5;
-  font-family: "Poppins", Sans-serif;
+  font-family: "Arial", Sans-serif;
   font-size: 18px;
 }
 .elementor-1364 .elementor-element.elementor-element-0c8ac2e.elementor-element {
